@@ -14,6 +14,7 @@ PyVISA Changelog
 - prevent adding duplicate paths to the DLL search path during ResourceManager
   instantiation #811
 - set 4.0.0 as the lower bound for `typing_extensions` PR #866
+- list VICP resources in the appropriates attributes PR #878
 
 1.14.1 (22-11-2023)
 -------------------
